--- a/.github/workflows/build_runner_image.yml
+++ b/.github/workflows/build_runner_image.yml
@@ -7,6 +7,7 @@ on:
         type: environment
         required: true
         description: Toolchain environment to build
+        default: stable
 
 permissions:
   packages: write
