--- a/.github/workflows/build_runner_image.yml
+++ b/.github/workflows/build_runner_image.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          build-args:
-            - "TOOLCHAIN=${{ inputs.environment }}"
+          build-args: |
+            TOOLCHAIN=${{ inputs.environment }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.lables }}
