--- a/.github/workflows/build_runner_image.yml
+++ b/.github/workflows/build_runner_image.yml
@@ -16,7 +16,7 @@ env:
 jobs:
   build-image:
     name: Build Image
-    runs-on: unbutu-latest
+    runs-on: ubuntu-latest
 
     permissions:
       contents: read
