--- a/.github/workflows/build_runner_image.yml
+++ b/.github/workflows/build_runner_image.yml
@@ -30,7 +30,8 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGIRSTRY }}/${{ env.IMAGE_NAME }}:latest
+          images: ${{ env.REGIRSTRY }}/${{ env.IMAGE_NAME }}
+          version: latest
 
       - name: Log into container registry
         uses: docker/login-action@v3
