--- a/.github/workflows/build_runner_image.yml
+++ b/.github/workflows/build_runner_image.yml
@@ -30,8 +30,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGIRSTRY }}/${{ env.IMAGE_NAME }}
-          version: latest
+          images: ${{ env.REGIRSTRY }}/${{ env.IMAGE_NAME }}:latest
 
       - name: Log into container registry
         uses: docker/login-action@v3
