--- a/.github/workflows/build_runner_image.yml
+++ b/.github/workflows/build_runner_image.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/ekshore/${{ env.IMAGE_NAME }}
           tags: |
+            type=semver,pattern={{version}}
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
 
 
