Adding check for nightly version
I really need to make these all work with a matrix

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,9 +50,18 @@ jobs:
 
     - name: Start stable release
       run: |
-        TAG="$STABLE_VERSION"
+        TAG="v$STABLE_VERSION"
         if git show-ref --tags --verify --quiet "refs/tags/${TAG}"; then
           echo "Version already exists no release needed"
         else
-          echo "New stable version available, starting release"
+          echo "New stable version available, starting release for ${TAG}"
+        fi
+
+    - name: Start nightly release
+      run: |
+        TAG="v$NIGHTLY_VERSION-$NIGHTLY_COMMIT"
+        if git show-ref --tags --verify --quite "refs/tags/${TAG}"; then
+          echo "Version already exists no release needed"
+        else
+          echo "New nightly version available, starting release for ${TAG}"
         fi
