--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Start nightly release
       run: |
         TAG="v$NIGHTLY_VERSION-$NIGHTLY_COMMIT"
-        if git show-ref --tags --verify --quite "refs/tags/${TAG}"; then
+        if git show-ref --tags --verify --quiet "refs/tags/${TAG}"; then
           echo "Version already exists no release needed"
         else
           echo "New nightly version available, starting release for ${TAG}"
