--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
 
     - name: Start ${{ matrix.channel }} release
       run: |
-        if [ "${{ matrix.channel }}" = "stable" ]; then
+        if [ ${{ matrix.channel }} = stable ]; then
           TAG="v${VERSION}"
         else 
           TAG="v${VERSION}-${COMMIT}"
@@ -61,5 +61,11 @@ jobs:
         if git show-ref --tags --verify --quiet "refs/tags/${TAG}"; then
           echo "Version already exists no release needed"
         else
-          echo "New ${{ matrix.channel }} version available, starting release for ${TAG}"
+          echo "New version available, starting release for ${TAG}"
+          echo "TAG=${TAG}" >> "${GITHUB_ENV}"
         fi
+
+    - name: Release
+      # uses: softprops/action-gh-release@v1
+      if: "$TAG"
+      run: echo "We have a release"
