Here we go again

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,8 +64,8 @@ jobs:
           echo "New version available, starting release for ${TAG}"
           echo "TAG=${TAG}" >> "${GITHUB_ENV}"
         fi
+        echo ${{ env.TAG }}
 
     - name: Release
-      if: ${{ env.TAG != "" }}
       # uses: softprops/action-gh-release@v1
       run: echo "We have a release"
