--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,7 +72,9 @@ jobs:
 
     - name: Release
       if: ${{ steps.checkTag.outputs.RELEASE }} != true
-      run: echo "Release version $TAG"
+      run: | 
+        echo "Does this even work ${{ steps.checkTag.outputs.RELEASE }}"
+        echo "Release version $TAG"
       # uses: softprops/action-gh-release@v1
       # run: |
       #  if git show-ref --tags --verify --quiet "refs/tags/${TAG}"; then
