Not sure what else to try

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,7 @@ jobs:
         fi
 
     - name: Release
-      if: ${{ steps.checkTag.outputs.RELEASE }} != true
+      if: ${{ steps.checkTag.outputs.RELEASE != true }}
       run: | 
         echo "Does this even work ${{ steps.checkTag.outputs.RELEASE }}"
         echo "Release version $TAG"
