--- a/.github/workflows/build_runner_image.yml
+++ b/.github/workflows/build_runner_image.yml
@@ -49,7 +49,7 @@ jobs:
           images: ${{ env.REGISTRY }}/ekshore/${{ env.IMAGE_NAME }}
           tags: |
             type=semver,pattern={{version}}
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            type=raw,value=${{ inputs.version }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
 
 
       - name: Log into container registry
