--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,6 @@ on:
 
 jobs:
   check-versions:
-    id: checkVersion
     name: Check Versions
     runs-on: ubuntu-latest
     strategy:
@@ -75,9 +74,9 @@ jobs:
 
   release:
     name: Release
-    if: ${{ jobs.checkVersion.outputs.RELEASE }} == true
+    if: ${{ jobs.check-version.outputs.RELEASE }} == true
     runs-on: ubuntu-latest
-    needs: checkVersion
+    needs: check-version
 
     steps:
     - name: Checkout
