--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,9 +74,9 @@ jobs:
 
   release:
     name: Release
-    if: ${{ jobs.check-version.outputs.RELEASE }} == true
-    runs-on: ubuntu-latest
     needs: check-version
+    if: ${{ needs.check-version.outputs.RELEASE }} == true
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
