--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,7 +80,7 @@ jobs:
   release-stable:
     name: Release stable
     needs: check-versions
-    if: ${{ needs.check-versions.outputs.RELEASE == true }}
+    if: ${{ needs.check-versions.outputs.RELEASE }}
     runs-on: ubuntu-latest
     environment: stable
 
