--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -166,6 +166,15 @@ jobs:
         tag_name: ${{ needs.check-versions.outputs.NIGHTLY_TAG }}
         prerelease: true
 
+    - name: Docker metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/ekshore/${{ env.IMAGE_NAME }}
+        tags: |
+          type=semver,pattern={{version}}
+          type=raw,value=${{ needs.check-versions.outputs.NIGHTLY_TAG }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+
     - name: Log into container registry
       uses: docker/login-action@v3
       with:
