--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: Release
 
 on:
   workflow_dispatch:
+  schedule:
+    -cron: '0 2 * * *'
 
 jobs:
   check-versions:
@@ -112,7 +114,6 @@ jobs:
           type=semver,pattern={{version}}
           type=raw,value=${{ needs.check-versions.outputs.TAG }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
 
-
     - name: Log into container registry
       uses: docker/login-action@v3
       with:
@@ -136,7 +137,6 @@ jobs:
         name: Test Release
         tag_name: ${{ needs.check-versions.outputs.TAG }}
         prerelease: false
-
 
   release-nightly: 
     name: Release nightly
@@ -198,5 +198,3 @@ jobs:
         name: Test Release
         tag_name: ${{ needs.check-versions.outputs.NIGHTLY_TAG }}
         prerelease: true
-
-
