--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -133,8 +133,8 @@ jobs:
     - name: Create GitHub release
       uses: softprops/action-gh-release@v1
       with: 
-        body: "This is a test release from stable"
-        name: Test Release
+        body: "Rebuilding docker container to keep up with rust release."
+        name: Release for Rust version ${{ needs.check-versions.outputs.TAG }}
         tag_name: ${{ needs.check-versions.outputs.TAG }}
         prerelease: false
 
@@ -161,8 +161,8 @@ jobs:
     - name: Create GitHub release
       uses: softprops/action-gh-release@v1
       with: 
-        body: "This is a test release from stable"
-        name: Test Release
+        body: "Rebuilding docker container to keep up with rust release"
+        name: Release for Rust version ${{ needs.check-versions.outputs.TAG }}
         tag_name: ${{ needs.check-versions.outputs.NIGHTLY_TAG }}
         prerelease: true
 
