--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,7 +112,7 @@ jobs:
         images: ${{ env.REGISTRY }}/ekshore/${{ env.IMAGE_NAME }}
         tags: |
           type=raw,value=${{ needs.check-versions.outputs.TAG }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
-          type=raw,value=latest,enabled-true
+          type=raw,value=latest
 
     - name: Log into container registry
       uses: docker/login-action@v3
@@ -165,7 +165,7 @@ jobs:
         images: ${{ env.REGISTRY }}/ekshore/${{ env.IMAGE_NAME }}
         tags: |
           type=raw,value=${{ needs.check-versions.outputs.NIGHTLY_TAG }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
-          type=raw,value=latest,enabled-true
+          type=raw,value=latest
 
     - name: Log into container registry
       uses: docker/login-action@v3
